# CQ3000_converter

./: README.md  convert-to-ome-zarr.py  convert_to_ome_zarr.py  pixi.toml  pyproject.toml  test.ipynb
.pixi/: config.toml
_playground/: test1.ipynb  test2.ipynb  test_multiview_stitcher.ipynb  test_ngio_wo copy.ipynb  test_ngio_wo.ipynb
