[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cq3000-converter"
version = "0.1.0"
description = "CLI to convert Yokogawa CQ3000 data to OME-Zarr"
authors = [{ name = "Marvin Albert", email = "marvin.albert@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "typer>=0.20.0,<0.21",
  "rich>=13.0.0",
  "typing_extensions>=4,<5",
  "joblib>=1.3",
  "fractal-uzh-converters @ git+https://github.com/fractal-analytics-platform/fractal-uzh-converters.git@v0.5.1",
]

[project.scripts]
cq3000-to-ome-zarr = "convert_to_ome_zarr:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["convert_to_ome_zarr.py"]
